--- a/styles/main.css
+++ b/styles/main.css
@@ -115,6 +115,13 @@ header > .content > .title {
   padding: 30px;
 }
 
+header > .content > .title > h1 > a {
+  color: #303030;
+  font-size: 1em;
+  line-height: normal;
+  font-weight: bold;
+}
+
 header > .content > .headerImageContainer {
   width: 100%;
   height: 100%;
@@ -199,8 +206,6 @@ header > .content > .headerImageContainer > .headerImage {
 main {
   width: 100%;
   height: fit-content;
-  max-width: 1200px;
-  margin: 0 auto;
 }
 
 main > section {
@@ -211,6 +216,10 @@ main > section {
   height: 100vh;
 }
 
+main > section:nth-child(2n + 1) {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
 main > section > .content {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -219,6 +228,8 @@ main > section > .content {
   grid-column-gap: 60px;
   width: 100%;
   height: fit-content;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 main > section > .content > .title {
