--- a/styles/zero.css
+++ b/styles/zero.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     height: fit-content;
     min-height: 100vh;
     color: #303030;
