--- a/styles/zero.css
+++ b/styles/zero.css
@@ -1,24 +1,26 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-html, body {
-    width: 100%;
-    scroll-behavior: smooth;
+html,
+body {
+  width: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    height: fit-content;
-    min-height: 100vh;
-    color: #303030;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  height: fit-content;
+  min-height: 100vh;
+  color: #303030;
 }
 
-p, a {
-    font-size: 1.2em;
-    line-height: 1.4em;
-    text-align: justify;
-    text-decoration: none;
+p,
+a {
+  font-size: 1.2em;
+  line-height: 1.4em;
+  text-align: justify;
+  text-decoration: none;
 }
